  placement in the development tree after installation, matching the behavior
  of the Program template.

  This is a backwards incompatible change resulting from the fact that
  previous behavior was simply wrong. There are additional tests checking
  various combinations of this behavior now.

  This issue is identified in ZMK.BugFixes as zmk-issue-80

Changes in 0.5:

* The Program.Test template no longer fails with syntax error when computing
  test coverage.

* The Toolchain module no longer misidentifies clang on FreeBSD.

* The Toolchain module has initial integration test suite that checks the real
  interaction with the host system. The integration test suite has reference
  data for FreeBSD and MacOS.

* The Coverity module gained support for checking if scan result is viable for
  submission and an ability to submit the scan automatically, using the new
  `upload-coverity-scan` target. See the manual page for additional information
  about project configuration.

* ZMK now supports additional static analysis tools: clang-tidy, clang-analyzer
  (via scan-build), cppcheck and sparse. They each define a CamelCase-named
  module and a Sources attribute which includes the set of files to scan.

* The distclean no longer forgets to run clean target.

* ZMK now allows installing multiple headers simultaneously with the
  use of the HeaderGroup template. HeaderGroup supports group customization of
  InstallDir and InstallMode and otherwise behaves identical to the Header
  template used multiple times, manually.

* The ClangTidy template now passes `-- $(CPPFLAGS)` if there are non-empty
  CPPFLAGS defined. This can be used to provide include paths and macro
  definitions appropriate for the project.

* The Sparse module now passes $(Sparse.Options) via CFLAGS set at the environment
  level before invoking recursive $(MAKE). This avoids clobbering CFLAGS set in
  the build system (e.g. to pass -fpic) as make treats command line overrides